[package]
name = "aevo-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
alloy = { version = "0.2", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.19"
serde_derive = "1.0.204"
serde_json = "1.0.122"
serde = "1.0.204"
eyre = "0.6.12"
test-log = "0.2.16"
reqwest = { version = "0.12.5", features = ["json"] }
rand = "0.8.5"
chrono = { version = "0.4.38", features = ["serde"] }
